<resources>
    <string name="app_name">dbms</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Destined Developers</string>
    <string name="nav_header_subtitle">destined_developers@dbms.amrita.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="traffic">Traffic</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="about_the_team">About the team</string>
    <string name="traffic_in_roads">traffic in roads</string>
    <string name="junction">Junction</string>
    <string name="vehicles">Vehicles</string>
    <string name="communicate">Communicate</string>
    <string name="welcome_to_traffic_monitoring_system">Welcome to Traffic Monitoring System</string>
    <string name="enter_your_vehicle_number">Enter your vehicle number</string>
    <string name="save_vehicle">save vehicle</string>
    <string name="enter_your_state_code">Enter your state code</string>
    <string name="enter_your_two_character_region_code">Enter your two character region code</string>
    <string name="enter_your_district_code_preceding_your_4_digit_plate_number">Enter your district code preceding your 4 digit plate number</string>
    <string name="view_entered_data">View Data</string>
    <string name="search_vehicle">search vehicle</string>
    <string name="settings">Settings</string>
    <string name="please_enter_the_basic_vehicle_details">Please enter the basic vehicle details</string>
    <string name="turn_on_if_the_vehicle_is_a_emergency_vehicle">Turn on if the vehicle is a emergency vehicle</string>
</resources>
