<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vehicle"
    android:fadingEdge="vertical"
    android:focusable="auto"
    android:scrollY="@dimen/cardview_default_radius"
    tools:ignore="PrivateResource">

    <EditText
        android:id="@+id/vehicle_no"
        android:layout_width="98dp"
        android:layout_height="91dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="23dp"
        android:hint="@string/enter_your_vehicle_number"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/header" />

    <TextView
        android:layout_width="393dp"
        android:layout_height="98dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/please_enter_the_basic_vehicle_details"
        android:textSize="30sp"
        android:textColor="@color/magenta"
        android:layout_alignParentTop="true"
        android:elevation="@dimen/fab_margin"/>

    <Button
        android:id="@+id/search_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="640dp"
        android:elevation="12dp"
        android:selectAllOnFocus="true"
        android:text="@string/save_vehicle"
        android:textColor="@color/magenta"
        android:textColorHighlight="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/region_id"
        android:layout_width="64dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="383dp"
        android:layout_marginEnd="257dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textColor="@color/magenta" />

    <EditText
        android:id="@+id/district_code"
        android:layout_width="56dp"
        android:layout_height="67dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="371dp"
        android:layout_marginEnd="147dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/magenta" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="66dp"
        android:layout_marginBottom="246dp"
        android:text="@string/turn_on_if_the_vehicle_is_a_emergency_vehicle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="260dp"
        android:text="@string/enter_your_state_code" />

</RelativeLayout>
